<resources>
    <string name="app_name">SapientiaAds</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Title</string>
    <string name="short_description">Short description</string>
    <string name="long_description">Long description</string>
    <string name="phone_number">Phone number</string>
    <string name="location_text">Location text</string>
    <string name="add">Add</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">lastname</string>
    <string name="email">email</string>
    <string name="phonenumber">phonenumber</string>
    <string name="address">address</string>
</resources>
